# atypical

./: README.md  atypical.cabal  presentation.org  stack.yaml
app/: DB.hs  Main.hs  OurPrelude.hs
