name:                atypical
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/atypical#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable atypical-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , base-prelude
                     , bytestring
                     , containers
                     , either
                     , lens
                     , lens-aeson
                     , servant
                     , servant-client
                     , servant-server
                     , servant-swagger
                     , swagger2
                     , text
                     , transformers
                     , unordered-containers
                     , wai
                     , warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/atypical
